REP-592 fixes breaking search box and missing space on mobile view

--- a/save/webpages/mir-layout/scss/project_styles/_header.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_header.scss
@@ -78,6 +78,9 @@ header {
     margin-left: 0;
   }
 }
+.searchfield_box {
+  flex-wrap: nowrap;
+}
 
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
