--- a/save/webpages/mir-layout/scss/project_styles/_layout.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_layout.scss
@@ -51,4 +51,8 @@ body > section {
 // Extra small devices (portrait phones): <= 576px
 @include media-breakpoint-down(xs) {
   // add/overwrite styles for responsive level xs
+  .container-no-padding {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
